<resources>
    <string name="app_name">Project Code</string>
    <string name="space">SPACE</string>
    <string name="clear">clear</string>
    <string name="send">SEND</string>
    <string name="language">Francais</string>
    <string name="sound">Sound</string>
    <string name="tutorial">Tutorial</string>
    <string name="red">Red</string>
    <string name="white">White</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="about">About</string>
    <string name="backcolor">Background Color</string>
    <string name="soundtog">Sound</string>
    <string name="hint">Enter Message</string>
    <string name="tab_text_1">Letters</string>
    <string name="tab_text_2">Numbers</string>
    <string name="tab_text_3">Chat Log</string>
    <string name="action_settings">Settings</string>
    <string name="letters">Letters</string>
    <string name="numbers">Numbers</string>
    <string name="quiz">Quiz Time!</string>
    <string name="quizstring">Quiz</string>
    <string name="wait"></string>
    <string name="right">Right</string>
    <string name="wrong">Wrong</string>
    <string name="website1">http://partscribdatabase.tech/gbmstats/MorseRetrieve.php</string>
    <string name="translator">translator</string>
    <string name="errconnection">Error Connection</string>
    <string name="retry">retry</string>
    <string name="cancel">cancel</string>
    <string name="err">error</string>
</resources>
