<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backcolor"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>


    <RadioGroup
        android:id="@+id/radgroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red"
         />


        <RadioButton
            android:id="@+id/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/white"
            />

        <RadioButton
            android:id="@+id/green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/green"
            />

        <RadioButton
            android:id="@+id/blue"
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            android:text="@string/blue"
           />

    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soundtog"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>


    <ToggleButton
        android:id="@+id/soundtog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        />

</LinearLayout>
