<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="70sp"
        android:id="@+id/translation"
        android:textSize="30sp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dot"
        android:text="."
        android:textSize="30sp"
        style="?android:attr/buttonBarButtonStyle"

        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dash"
        android:text="-"
        android:textSize="30sp"
        style="?android:attr/buttonBarButtonStyle"/>


     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/space"
         android:text="@string/space"
         style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/send"
            android:text="@string/send"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clear"
            android:text="@string/clear"
            style="?android:attr/buttonBarButtonStyle"/>

</LinearLayout>

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp" />

</LinearLayout>